fix: ajustes nos testes de unidade